# PKI-Based-2FA-Microservice

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_keys.py  student_private.pem  student_public.pem  test_api.sh
app/: crypto_utils.py  main.py  totp_utils.py
cron/: 2fa_cron
scripts/: generate_proof.py  generate_rsa_keypair.py  log_2fa_cron.py  request_seed.py
tests/: test_decrypt.py  test_totp.py
